# duckietown-visualodo

./: .gitignore  Dockerfile  Makefile  README.md  odometry_rviz_conf.rviz
.circleci/: config.yml
Documents/Duckietown/duckietown-visualodo/: .gitattributes  .gitignore
Lab06/: Lab06 PreLab Report.docx  ~$b06 PreLab Report.docx
Lab06/skeleton/lab06/: lab06.ino
Lab06/skeleton/mP/: a.out  digital_filter.h  lab06_test.c  lab06_test.out  makefile  oao.c  pid.c  pid.h  tracking.cpp  tracking.h
lab06/skeleton/lab06/: lab06.ino
lab06/skeleton/mP/: lab06_test.c  makefile  pid.c
lib-visualodo/: .bumpversion.cfg  .coveragerc  .gitignore  MANIFEST.in  Makefile  requirements.txt  setup.py
lib-visualodo/out-comptests/compmake/: cm-args-_dynreports_create_index.pickle  cm-args-_dynreports_merge.pickle  cm-args-duckietown_visualodo_tests-_dynreports_getbra-2.pickle  cm-args-duckietown_visualodo_tests-_dynreports_getbra.pickle  cm-args-duckietown_visualodo_tests-_dynreports_getres-2.pickle  cm-args-duckietown_visualodo_tests-_dynreports_getres.pickle  cm-args-duckietown_visualodo_tests-_dynreports_merge.pickle  cm-args-duckietown_visualodo_tests-comptests.pickle  cm-cache-_dynreports_create_index.pickle  (+57 more)
ros-visualodo/: CMakeLists.txt  package.xml  setup.py
ros-visualodo/launch/: feature_extractor_node.launch  feature_tracking_node.launch  feature_visual_odometry.launch  motion_estimation_node.launch  visual_odometry_node.launch
ros-visualodo/src/: feature_extractor_node.py  feature_tracking_node.py  main_node.py  motion_estimation_node.py  visual_odometry_node.py
(+27 files in other folders)
