<package>
  <name>duckietown_visualodo</name>
  <version>0.0.1</version>
  <description>
    A pipeline for monocular visual odometry.
  </description>
  <maintainer email="gibernas@ethz.ch">Gianmarco Bernasconi</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
